--- a/src/pages/user/logon/styles.css
+++ b/src/pages/user/logon/styles.css
@@ -45,3 +45,15 @@
 .descriptiontext {
   color: rgb(41, 27, 23);
 }
+.center {
+  margin: auto;
+  width: 100%;
+  padding: 5px;
+}
+.center-link {
+  text-align: center;
+  margin: auto;
+  width: 100%;
+  padding-top: 10px;
+
+}
