Refatora posição do link de recuperar senha

--- a/src/pages/user/logon/styles.css
+++ b/src/pages/user/logon/styles.css
@@ -57,6 +57,12 @@
   padding-top: 10px;
 
 }
+.right-link {
+  text-align: right;
+  margin: auto;
+  width: 100%;
+  padding-top: 5px;
+}
 
 img{
   margin: auto;
